[gd_scene load_steps=28 format=3 uid="uid://bgaps5gh8kke"]

[ext_resource type="Script" path="res://scenes/hangok.gd" id="1_q5ig0"]
[ext_resource type="Texture2D" uid="uid://cw8oryigrssbi" path="res://pictures/vissza1.png" id="1_wm3fr"]
[ext_resource type="Script" path="res://scenes/vissza.gd" id="1_xr6c4"]
[ext_resource type="AudioStream" uid="uid://1v5x41gphjy3" path="res://zenék/kurzor.mp3" id="2_kdflx"]
[ext_resource type="Texture2D" uid="uid://104t868s8kmg" path="res://pictures/vissza2.png" id="2_nul0y"]
[ext_resource type="Texture2D" uid="uid://cmsifvv3w8gbb" path="res://pictures/creditshatter.png" id="2_uj44b"]
[ext_resource type="AudioStream" uid="uid://c83i1jqk88q4f" path="res://zenék/buttonpress.mp3" id="3_qt3go"]
[ext_resource type="Script" path="res://scenes/audio_beállítások.gd" id="7_ogfy8"]
[ext_resource type="Script" path="res://scenes/mentés.gd" id="8_rapbm"]
[ext_resource type="Texture2D" uid="uid://ba3b1jc3jg5dn" path="res://pictures/hangeffektcrop.png" id="9_gkvl2"]
[ext_resource type="Texture2D" uid="uid://dgs5aesj4j42t" path="res://pictures/zenekcrop.png" id="10_vgqil"]
[ext_resource type="Texture2D" uid="uid://ciakdj4jftmjb" path="res://pictures/gombcrop.png" id="11_gxurx"]
[ext_resource type="Texture2D" uid="uid://cle1vav8fsff2" path="res://pictures/faszomaszadba.png" id="11_suwfs"]
[ext_resource type="Texture2D" uid="uid://bosevijwj08cx" path="res://pictures/csikamikocka.png" id="12_4tjue"]
[ext_resource type="Texture2D" uid="uid://b3h185ff7oyf" path="res://pictures/atlathato.png" id="13_jiwj2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_frn2n"]
atlas = ExtResource("11_suwfs")

[sub_resource type="AtlasTexture" id="AtlasTexture_c4qco"]
atlas = ExtResource("11_suwfs")

[sub_resource type="AtlasTexture" id="AtlasTexture_7megm"]
atlas = ExtResource("12_4tjue")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lg34a"]
texture = SubResource("AtlasTexture_7megm")
texture_margin_left = 14.0
texture_margin_top = 14.0
texture_margin_right = 14.0
texture_margin_bottom = 14.0

[sub_resource type="AtlasTexture" id="AtlasTexture_r6rye"]
atlas = ExtResource("12_4tjue")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fudg5"]
texture = SubResource("AtlasTexture_r6rye")
texture_margin_left = 14.0
texture_margin_top = 14.0
texture_margin_right = 14.0
texture_margin_bottom = 14.0

[sub_resource type="AtlasTexture" id="AtlasTexture_66ka4"]
atlas = ExtResource("13_jiwj2")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_42w4j"]
texture = SubResource("AtlasTexture_66ka4")
texture_margin_left = 14.0
texture_margin_top = 14.0
texture_margin_right = 14.0
texture_margin_bottom = 14.0

[sub_resource type="Theme" id="Theme_c76xt"]
HSlider/icons/grabber = SubResource("AtlasTexture_frn2n")
HSlider/icons/grabber_highlight = SubResource("AtlasTexture_c4qco")
HSlider/styles/grabber_area = SubResource("StyleBoxTexture_lg34a")
HSlider/styles/grabber_area_highlight = SubResource("StyleBoxTexture_fudg5")
HSlider/styles/slider = SubResource("StyleBoxTexture_42w4j")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sa3kn"]
texture = ExtResource("11_suwfs")

[sub_resource type="AtlasTexture" id="AtlasTexture_wmaib"]
atlas = ExtResource("11_suwfs")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_p3aln"]
texture = SubResource("AtlasTexture_wmaib")
texture_margin_left = 14.0
texture_margin_top = 14.0
texture_margin_right = 14.0
texture_margin_bottom = 4.0

[node name="Hangok" type="Node2D"]
script = ExtResource("1_q5ig0")

[node name="HangokHáttér" type="Sprite2D" parent="."]
position = Vector2(576, 324)
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_uj44b")

[node name="vissza" type="TextureButton" parent="."]
offset_left = -39.0
offset_top = -27.0
offset_right = 307.0
offset_bottom = 183.0
texture_normal = ExtResource("1_wm3fr")
texture_pressed = ExtResource("2_nul0y")
texture_hover = ExtResource("2_nul0y")
texture_focused = ExtResource("2_nul0y")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("1_xr6c4")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_kdflx")
bus = &"SFX"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_qt3go")
bus = &"SFX"

[node name="AudioBeállítások" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("7_ogfy8")

[node name="Mentés" type="Button" parent="AudioBeállítások"]
layout_mode = 2
offset_left = 142.0
offset_top = 609.0
offset_right = 968.0
offset_bottom = 640.0
text = "Mentés"
script = ExtResource("8_rapbm")

[node name="VBoxContainer" type="VBoxContainer" parent="AudioBeállítások"]
layout_mode = 0
offset_left = 386.0
offset_top = 123.0
offset_right = 923.0
offset_bottom = 501.0

[node name="Főhangerő" type="Sprite2D" parent="AudioBeállítások/VBoxContainer"]
position = Vector2(-69, 116)
texture = ExtResource("9_gkvl2")

[node name="FőhangerőSlider" type="HSlider" parent="AudioBeállítások/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_c76xt")
theme_override_icons/grabber = ExtResource("11_gxurx")
theme_override_icons/grabber_highlight = ExtResource("11_gxurx")
theme_override_icons/grabber_disabled = ExtResource("11_gxurx")
theme_override_icons/tick = ExtResource("11_gxurx")
theme_override_styles/grabber_area = SubResource("StyleBoxTexture_sa3kn")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxTexture_p3aln")
max_value = 1.0
step = 0.05

[node name="SFXSlider" type="HSlider" parent="AudioBeállítások/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
max_value = 1.0
step = 0.05

[node name="Zene" type="Sprite2D" parent="AudioBeállítások/VBoxContainer"]
position = Vector2(-67, 368)
texture = ExtResource("10_vgqil")

[node name="ZeneSlider" type="HSlider" parent="AudioBeállítások/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
max_value = 1.0
step = 0.05

[connection signal="mouse_entered" from="vissza" to="vissza" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="vissza" to="vissza" method="_on_mouse_exited"]
[connection signal="pressed" from="vissza" to="vissza" method="_on_pressed"]
[connection signal="mouse_entered" from="AudioBeállítások/Mentés" to="AudioBeállítások/Mentés" method="_on_mouse_entered"]
[connection signal="pressed" from="AudioBeállítások/Mentés" to="." method="_on_mentés_pressed"]
[connection signal="pressed" from="AudioBeállítások/Mentés" to="AudioBeállítások/Mentés" method="_on_pressed"]
[connection signal="mouse_exited" from="AudioBeállítások/VBoxContainer/FőhangerőSlider" to="AudioBeállítások" method="_on_főhangerő_slider_mouse_exited"]
[connection signal="mouse_exited" from="AudioBeállítások/VBoxContainer/SFXSlider" to="AudioBeállítások" method="_on_sfx_slider_mouse_exited"]
[connection signal="mouse_exited" from="AudioBeállítások/VBoxContainer/ZeneSlider" to="AudioBeállítások" method="_on_zene_slider_mouse_exited"]
